--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@types/mongoose": "^5.11.96",
+    "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.416",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -53,7 +54,9 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.2.0",
